fix: image stretching in footer

--- a/src/components/Footer.module.scss
+++ b/src/components/Footer.module.scss
@@ -183,6 +183,14 @@
   }
 }
 
+@media screen and (max-width: 341px) {
+  .footer {
+    img {
+      height: unset;
+    }
+  }
+}
+
 @keyframes firework {
   from {
     width: 0;
